add template for the other three sections add jquery to project make items fade in when you scroll over them

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <Title>Happy Anniversary!</Title>
         <link rel="stylesheet" type="text/css" href="style.css"/> 
+        <script src = "jquery.js"></script>
+        <script src="index.js"></script>
     </head>
     <body>
         <header>
